2003-12-03  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/python/log.py: Added exception handling to
	log publishing code.  Observers which raise exceptions
	will now be removed from the observer list.

2003-12-02  Jp Calderone  <exarkun@twistedmatrix.com>

	* .: Releasing Twisted 1.1.1rc3.

2003-12-01  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.1rc2 (from CVS HEAD).

2003-12-01  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/python/runtime.py: Added seconds method to Platform
	class.

	* twisted/internet/base.py, twisted/internet/task.py: Changed
	use of time.time() to use Platform.seconds() instead.

2003-11-24  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/abstract.py: Changed FileDescriptor's
	registerProducer method to immediately call the given producer's
	stopProducing method if the FileDescriptor is in the process of
	or has finished disconnecting.

2003-11-24  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/imap4.py: Fix incorrect behavior of closing the
	mailbox in response to an EXPUNGE command.

2003-11-21  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/trial/runner.py: Added missing calls to setUpClass and
	tearDownClass in SingletonRunner.

2003-11-21  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.1rc1.

2003-11-20  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/imap4.py: Fixed incorrect generation of
	INTERNALDATE information.

2003-11-20  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/abstract.py: Added an assert to
	FileDescriptor.resumeProducing to prevent it from being
	called when the transport is no longer connected.

2003-11-20  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/tasks.py: LoopingCall added.

2003-10-14  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/tasks.py: Deprecated scheduling API removed.
